[tool.poetry]
authors = ["Douglas Bunker <dbunker@seagen.com>", "Andrew Schofield <andrew@schofield.ch>",]
description = "Mocks the streamlit interfaces for unit testing"
license = "MIT"
name = "streamlit_mock"
version = "0.0.5"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.poetry.dependencies]
addict = "^2.4.0"
python = "^3.8"
streamlit = "<1.16"

[tool.poetry.group.dev.dependencies]
black = "^22.6.0"
isort = "^5.10.1"
pre-commit = "^2.20.0"
pytest = "^7.1.2"
toml = "^0.10.2"
bokeh = "^3.0.3"

[project]
authors = [
  {name = "Douglas Bunker", email = "dbunker@seagen.com"},
  {name = "Andrew Schofield", email = "andrew@schofield.ch"},
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
]
dependencies = [
  "addict",
]
description = "Mocks the stremlit interfaces for unit testing"
license = {file = "LICENSE"}
name = "streamlit_mock"
readme = "README.md"
requires-python = ">=3.8"
version = "0.0.5"

[project.urls]
repository = "https://github.com/Seagen/opensource-streamlit-mock"

[tool.black]
SRC = ["src", "tests"]
line-length = 120

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.isort]
profile = "black"
src_paths = ["src", "tests"]
